changed signup workflow

--- a/User/templates/user/SignUp.html
+++ b/User/templates/user/SignUp.html
@@ -21,5 +21,6 @@
     {% endfor %}
 {% endif %}
 <button>Save</button>
+<div class="text-center">Existing user?<a href="/user/login"> Login</a></div>
 </form>
 {%endblock%}
