--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
               </form>
               
               {%else%}
-              <a href="/user/signup" title="Sign-Up"><button style="border-radius:50px; background:white; width: 8rem; height:3rem; margin-right:1rem;">Login</button></a>
+              <a href="/user/login" title="Login"><button style="border-radius:50px; background:white; width: 8rem; height:3rem; margin-right:1rem;">Login</button></a>
               {%endif%}
               {% if messages %}
               <div class="messages">
