--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,9 @@
             {%block title%}Bloster{%endblock%}
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="/media/bloster-img.png">
+        {%load static%}
+<link href="{%static 'User/css/style.css'%}" rel="stylesheet">
     </head>
     <body>
 
@@ -14,7 +17,7 @@
             <a class="navbar-brand" style="margin-left:2rem; color:yellow;font-size:3rem" href="/">Bloster</a>
             <div class="form-inline">
               {%if user.is_authenticated%}
-              <a href="/posts/create" titl="Create Post"><button style="border-radius:20px; width: 3rem; height:3rem; margin-right:1rem;" class="btn btn-primary"><span style="font-size:20px;padding-bottom:1rem">+</span></button></a>
+              <a href="/posts/create/" titl="Create Post"><button style="border-radius:20px; width: 3rem; height:3rem; margin-right:1rem;" class="btn btn-primary"><span style="font-size:20px;padding-bottom:1rem">+</span></button></a>
               <a href="/user/profile">
                 {% include "user/layout2.html" with nav="1"%}
               </a>
