--- a/posts/templates/posts/viewPost.html
+++ b/posts/templates/posts/viewPost.html
@@ -4,6 +4,31 @@
 {%endblock%}
 
 {%block body%}
-{{data.content}}
-{{data.modify_date}}
+
+
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col-xl-8 col-10 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0; border-bottom:0; border-style:solid;">
+            <div class="text-center">{{data.creation_date}}</div>
+        </div>
+    </div>
+    <div class="row justify-content-md-center" style="border:10px; border-style:solid; border-bottom:0;">
+        <div class="col-xl-8 col-10 justify-content-center">
+            <div style="font-size:3rem"><b>{{data.title}}</b></div>
+        </div>
+    </div>
+    <div class="row justify-content-md-center"  style="border:7px; border-style:solid; border-bottom:0; border-top:0;">
+        <div class="col-xl-8 col-10 justify-content-center font-monospace">
+            <div ><img src="{{author.pic.url}}" alt="{{data.author}}" style="border-radius:100%; height:4rem; width:4rem;margin-top:10px"><span class="text-muted"> BY</span> <a href="#" style="text-decoration:none; color:black">{{data.author}}</a></div>
+            <br>
+        </div>
+    </div>
+    
+    <div class="row justify-content-md-center" style="border-right:0; border-left:0; border-bottom:0; border-style:solid;">
+        <div class="col-xl-8 col-10 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0; border-style:solid;">
+            <div style="margin:1rem;">{{data.content}}</div>
+
+        </div>
+    </div>
+</div>
 {%endblock%}
