--- a/posts/templates/posts/viewPost.html
+++ b/posts/templates/posts/viewPost.html
@@ -8,8 +8,14 @@
 
 <div class="container">
     <div class="row justify-content-md-center">
-        <div class="col-xl-8 col-10 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0; border-bottom:0; border-style:solid;">
-            <div class="text-center">{{data.creation_date}}</div>
+        <div class="col-xl-8 col-xs-12 col-md-8 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0; border-bottom:0; border-style:solid;">
+            <div class="text-center">{{data.creation_date}}
+                {%if user == data.author%}
+                <a href="/posts/edit/?p={{data.ulink}}" style="text-decoration:none; color:black;"><button style="background:none;border:0;"><img src='/media/pencil.png'></button></a> 
+            {%endif%}
+
+            </div>
+            
         </div>
     </div>
     <div class="row justify-content-md-center" style="border:10px; border-style:solid; border-bottom:0;">
@@ -19,20 +25,22 @@
     </div>
     <div class="row justify-content-md-center"  style="border:7px; border-style:solid; border-bottom:0; border-top:0;">
         <div class="col-xl-8 col-10 justify-content-center font-monospace">
-            <div ><img src="{{author.pic.url}}" alt="{{data.author}}" style="border-radius:100%; height:4rem; width:4rem;margin-top:10px"><span class="text-muted"> BY</span> <a href="#" style="text-decoration:none; color:black">{{data.author}}</a></div>
+            
+                <div><img src="{{author.pic.url}}" alt="{{data.author}}" style="border-radius:100%; height:4rem; width:4rem;margin-top:10px"><span class="text-muted"> BY</span> <a href="#" style="text-decoration:none; color:black">{{data.author}}</a></div>
+                
             <br>
         </div>
     </div>
     
     <div class="row justify-content-md-center" style="border-right:0; border-left:0; border-bottom:0; border-style:solid;">
-        <div class="col-xl-8 col-10 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0;border-bottom:0; border-style:solid;">
-            <div style="margin:1rem;margin-bottom:0;">
+        <div class="col-xl-8 col-m-10 col-xs-12 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0;border-bottom:0; border-style:solid;">
+            <div style="margin:1rem;">
                 {%if data.image and data.image != 'blank.png'%}
-                <img src="{{data.image.url}}" alt="{{data.title}}" style="height:80%; width:100%;">
+                <img src="{{data.image.url}}" alt="{{data.title}}" style="height:100%; width:100%;">
                 {%endif%}
                 </div>
         </div>
-        <div class="col-xl-8 col-10 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0; border-style:solid;">
+        <div class="col-xl-8 col-m-10 col-xs-12 justify-content-center font-monospace" style="border-right:5px; border-left:5px; border-top:0; border-style:solid;">
                 <br>
                 {{data.content}}<br><br><br><br></div>
                 
